Translation methods/3. Translator/translator/src/pascalParser.java
// Generated from pascal.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, SQUOTE=2, LPAREN=3, RPAREN=4, DQUOTE=5, COMMA=6, COLON=7, SEMI=8, 
		DOT=9, PLUS=10, MINUS=11, DIV=12, MOD=13, STAR=14, SLASH=15, EQUAL=16, 
		NOT_EQUAL=17, LT=18, LE=19, GE=20, GT=21, PROGRAM=22, BOOLEAN=23, INTEGER=24, 
		STRING=25, REPEAT=26, DOWNTO=27, WHILE=28, BEGIN=29, UNTIL=30, CHAR=31, 
		THEN=32, ELSE=33, END=34, AND=35, VAR=36, FOR=37, OR=38, IF=39, TO=40, 
		DO=41, READ=42, WRITE=43, WS=44, IDENT=45, NUM_INT=46;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_programVarDeclaration = 3, 
		RULE_varDeclaration = 4, RULE_varEntryLine = 5, RULE_varType = 6, RULE_varEntries = 7, 
		RULE_mainRunningScope = 8, RULE_runningScope = 9, RULE_runningOperation = 10, 
		RULE_assignment = 11, RULE_rightHandExpression = 12, RULE_ifExpression = 13, 
		RULE_condition = 14, RULE_functionCall = 15, RULE_functionName = 16, RULE_forExpression = 17, 
		RULE_whileExpression = 18, RULE_stringExpression = 19, RULE_repeatExpression = 20;
	public static final String[] ruleNames = {
		"program", "programHeading", "identifier", "programVarDeclaration", "varDeclaration", 
		"varEntryLine", "varType", "varEntries", "mainRunningScope", "runningScope", 
		"runningOperation", "assignment", "rightHandExpression", "ifExpression", 
		"condition", "functionCall", "functionName", "forExpression", "whileExpression", 
		"stringExpression", "repeatExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':='", "'''", "'('", "')'", "'\"'", "','", "':'", "';'", "'.'", 
		"'+'", "'-'", "'div'", "'mod'", "'*'", "'/'", "'='", "'<>'", "'<'", "'<='", 
		"'>='", "'>'", "'program'", "'boolean'", "'integer'", "'string'", "'repeat'", 
		"'downto'", "'while'", "'begin'", "'until'", "'char'", "'then'", "'else'", 
		"'end'", "'and'", "'var'", "'for'", "'or'", "'if'", "'to'", "'do'", "'read'", 
		"'write'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ASSIGN", "SQUOTE", "LPAREN", "RPAREN", "DQUOTE", "COMMA", "COLON", 
		"SEMI", "DOT", "PLUS", "MINUS", "DIV", "MOD", "STAR", "SLASH", "EQUAL", 
		"NOT_EQUAL", "LT", "LE", "GE", "GT", "PROGRAM", "BOOLEAN", "INTEGER", 
		"STRING", "REPEAT", "DOWNTO", "WHILE", "BEGIN", "UNTIL", "CHAR", "THEN", 
		"ELSE", "END", "AND", "VAR", "FOR", "OR", "IF", "TO", "DO", "READ", "WRITE", 
		"WS", "IDENT", "NUM_INT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public String code;
		public ProgramHeadingContext programHeading;
		public ProgramVarDeclarationContext programVarDeclaration;
		public MainRunningScopeContext mainRunningScope;
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public ProgramVarDeclarationContext programVarDeclaration() {
			return getRuleContext(ProgramVarDeclarationContext.class,0);
		}
		public MainRunningScopeContext mainRunningScope() {
			return getRuleContext(MainRunningScopeContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		((ProgramContext)_localctx).code =  "";
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((ProgramContext)_localctx).programHeading = programHeading();
			setState(43);
			((ProgramContext)_localctx).programVarDeclaration = programVarDeclaration();
			setState(44);
			((ProgramContext)_localctx).mainRunningScope = mainRunningScope();

					_localctx.code += ((ProgramContext)_localctx).programHeading.header + "\n";
					_localctx.code += ((ProgramContext)_localctx).programVarDeclaration.declarations + "\n";
					_localctx.code += ((ProgramContext)_localctx).mainRunningScope.code + "\n";
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeadingContext extends ParserRuleContext {
		public String header;
		public IdentifierContext identifier;
		public TerminalNode PROGRAM() { return getToken(pascalParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(pascalParser.SEMI, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitProgramHeading(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		((ProgramHeadingContext)_localctx).header =  "";
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(PROGRAM);
			setState(48);
			((ProgramHeadingContext)_localctx).identifier = identifier();
			setState(49);
			match(SEMI);

					_localctx.header += "// translated program " + ((ProgramHeadingContext)_localctx).identifier.value + "\n";
					_localctx.header += "#include <stdio.h>" + "\n";
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public String value;
		public Token IDENT;
		public TerminalNode IDENT() { return getToken(pascalParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((IdentifierContext)_localctx).IDENT = match(IDENT);

					((IdentifierContext)_localctx).value =  (((IdentifierContext)_localctx).IDENT!=null?((IdentifierContext)_localctx).IDENT.getText():null);
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramVarDeclarationContext extends ParserRuleContext {
		public String declarations;
		public VarDeclarationContext varDeclaration;
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public ProgramVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterProgramVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitProgramVarDeclaration(this);
		}
	}

	public final ProgramVarDeclarationContext programVarDeclaration() throws RecognitionException {
		ProgramVarDeclarationContext _localctx = new ProgramVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_programVarDeclaration);
		((ProgramVarDeclarationContext)_localctx).declarations =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(55);
				((ProgramVarDeclarationContext)_localctx).varDeclaration = varDeclaration();

						_localctx.declarations += ((ProgramVarDeclarationContext)_localctx).varDeclaration.vars;
					  
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public String vars;
		public VarEntryLineContext varEntryLine;
		public TerminalNode VAR() { return getToken(pascalParser.VAR, 0); }
		public List<VarEntryLineContext> varEntryLine() {
			return getRuleContexts(VarEntryLineContext.class);
		}
		public VarEntryLineContext varEntryLine(int i) {
			return getRuleContext(VarEntryLineContext.class,i);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclaration);
		((VarDeclarationContext)_localctx).vars =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(VAR);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				((VarDeclarationContext)_localctx).varEntryLine = varEntryLine();

						_localctx.vars += ((VarDeclarationContext)_localctx).varEntryLine.line + "\n";
					  
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COLON || _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarEntryLineContext extends ParserRuleContext {
		public String line;
		public VarEntriesContext varEntries;
		public VarTypeContext varType;
		public VarEntriesContext varEntries() {
			return getRuleContext(VarEntriesContext.class,0);
		}
		public TerminalNode COLON() { return getToken(pascalParser.COLON, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(pascalParser.SEMI, 0); }
		public VarEntryLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varEntryLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterVarEntryLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitVarEntryLine(this);
		}
	}

	public final VarEntryLineContext varEntryLine() throws RecognitionException {
		VarEntryLineContext _localctx = new VarEntryLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varEntryLine);
		((VarEntryLineContext)_localctx).line =  "";
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((VarEntryLineContext)_localctx).varEntries = varEntries();
			setState(72);
			match(COLON);
			setState(73);
			((VarEntryLineContext)_localctx).varType = varType();
			setState(74);
			match(SEMI);

					_localctx.line += ((VarEntryLineContext)_localctx).varType.type + " " + ((VarEntryLineContext)_localctx).varEntries.list + ";";
					String [] varNames = ((VarEntryLineContext)_localctx).varEntries.list.split (", ");
					for (String var : varNames) {
						VarManager.addVar (var, ((VarEntryLineContext)_localctx).varType.type);
					}
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarTypeContext extends ParserRuleContext {
		public String type;
		public TerminalNode BOOLEAN() { return getToken(pascalParser.BOOLEAN, 0); }
		public TerminalNode CHAR() { return getToken(pascalParser.CHAR, 0); }
		public TerminalNode INTEGER() { return getToken(pascalParser.INTEGER, 0); }
		public TerminalNode STRING() { return getToken(pascalParser.STRING, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitVarType(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varType);
		((VarTypeContext)_localctx).type =  "void *";
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(BOOLEAN);
				((VarTypeContext)_localctx).type =  "bool";
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(CHAR);
				((VarTypeContext)_localctx).type =  "char";
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(INTEGER);
				((VarTypeContext)_localctx).type =  "int";
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(STRING);
				((VarTypeContext)_localctx).type =  "char *";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarEntriesContext extends ParserRuleContext {
		public String list;
		public IdentifierContext identifier;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pascalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pascalParser.COMMA, i);
		}
		public VarEntriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varEntries; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterVarEntries(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitVarEntries(this);
		}
	}

	public final VarEntriesContext varEntries() throws RecognitionException {
		VarEntriesContext _localctx = new VarEntriesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varEntries);
		((VarEntriesContext)_localctx).list =  "";
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((VarEntriesContext)_localctx).identifier = identifier();

						_localctx.list += ((VarEntriesContext)_localctx).identifier.value;
					  
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
